@startuml
!include _common.style

title Poker Game (Structure)
center footer project #1 - class diagram


package uqam.inf5153.poker {

  class Main {
    + {static} main(args: String[])
    --
    - {static} saisieUtilisateur(joueurs: List<Joueur>)
    - {static} contientJoueur(joueurs: List<Joueur>) : boolean
  }

  Class Carte{
    + this(val:String, clr:String)
    + afficherValeur() : String
    + afficherCouleur() : String
    + couleurEgale(autre : Carte) : boolean
    + valeurEgale(autre : Carte) : boolean
    + valeurSuperieure(autre : Carte) : boolean
  }

  Enum Valeur{

  }

  Enum Couleur{
  
  }

  class Mains{
     + plusForteCombi : Combo 
     + carteForte : Carte
     + mainForte : List<Carte>
     --
     + this(saisie : String)
     + trouverCombo() : Combo
     + afficherMainForte() : String
     --
     - plusForteCarte() : Carte
     - flush() : boolean
     - paire() : boolean
  }

  class Joueur{
    + id : String
    + main : Mains
    + victoires : int
    --
    + this(numero : int, main : Mains)
  }

  class Partie{
    + joueurs : List<Joueur>
    + resultat : String  
    + explication : String
    --
    + this(joueurs : List<Joueur>)
    --
    - evaluerPartie(joueurs: List<Joueur>)
  }

  interface Combinaison{
    + trouverCombo(): Combo
  }

  Enum Combo{

  }

  Carte *-- "1" Valeur
  Carte *-- "1" Couleur
  Mains *-- "5" Carte
  Joueur o-- "1" Mains
  Partie *-- "2..*" Joueur
  Main --> Partie
  Combinaison *-- "1" Combo
  Mains --> Combinaison

}

@enduml
